# cpp-compile-demo

./: README.md  cpp_compile_link.md
add_sub_a/: add.h
add_sub_a_folder/: main
add_sub_so/: main  main.c
cmake_version/: CMakeLists.txt  main.c
cmake_version/src/: CMakeLists.txt  add.c
test/: test  test.c  test.i  test.s
